tweaked exercise-01.ipynb

--- a/exercises/exercise-01.ipynb
+++ b/exercises/exercise-01.ipynb
@@ -169,20 +169,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "e148d81adf9935001769b94576632eeb",
-     "grade": true,
-     "grade_id": "7",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!whoami"
    ]
   },
   {
@@ -190,20 +186,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "30422743f0e2b461bf0ba34ee3095953",
-     "grade": true,
-     "grade_id": "8",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!pwd"
    ]
   },
   {
@@ -211,20 +203,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "54917395275aa52cb529b10096688ba7",
-     "grade": true,
-     "grade_id": "9",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -F"
    ]
   },
   {
@@ -232,20 +220,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "04b817b7e26a80adf07d83de54062ac9",
-     "grade": true,
-     "grade_id": "13",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -F"
    ]
   },
   {
@@ -253,20 +237,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "4ab442879ee52306b50a1bc86e9e2fbf",
-     "grade": true,
-     "grade_id": "10",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -F data-shell/"
    ]
   },
   {
@@ -274,20 +254,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "b0ccfdd46ed7daee501c75d5b4ef1f40",
-     "grade": true,
-     "grade_id": "15",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -aF"
    ]
   },
   {
@@ -295,20 +271,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "c57f405bb5d517efa1e48790f94c4e3d",
-     "grade": true,
-     "grade_id": "16",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -af ."
    ]
   },
   {
@@ -316,37 +288,16 @@
    "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "4754d14371af3a1fd1f926f809c83e15",
-     "grade": true,
+     "checksum": "68b014c6f404b0d1d947f29e2bfcc486",
+     "grade": false,
      "grade_id": "17",
-     "locked": false,
+     "locked": true,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": false,
-    "nbgrader": {
-     "checksum": "3614583e320b87e3a7c770f5f6141bc9",
-     "grade": true,
-     "grade_id": "14",
-     "locked": false,
-     "points": 1,
-     "solution": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "What is the difference between the two previous cells, and what does the single dot mean?"
    ]
   },
   {
@@ -354,9 +305,9 @@
    "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "78b8112dd86d17a0f4bf869575719694",
+     "checksum": "096f49df2f3ad787d39504949efc14c8",
      "grade": true,
-     "grade_id": "18",
+     "grade_id": "156",
      "locked": false,
      "points": 1,
      "solution": true
@@ -371,20 +322,67 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "nbgrader": {
+     "grade": false,
+     "locked": false,
+     "points": 1,
+     "solution": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!ls -F .."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "232fbe18c99277fb3dfcda19be5bf6e1",
+     "checksum": "7edc7fa8b245f34a03ead3d212893148",
+     "grade": false,
+     "grade_id": "18",
+     "locked": true,
+     "points": 1,
+     "solution": false
+    }
+   },
+   "source": [
+    "What do the double dots mean?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "checksum": "aa03dc1d4946820269aa3232690a8098",
      "grade": true,
-     "grade_id": "19",
+     "grade_id": "155",
      "locked": false,
      "points": 1,
      "solution": true
     }
    },
+   "source": [
+    "YOUR ANSWER HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "nbgrader": {
+     "grade": false,
+     "locked": false,
+     "points": 1,
+     "solution": false
+    }
+   },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls data-shell/north-pacific-gyre/2012-07-03/"
    ]
   },
   {
@@ -410,20 +408,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "b0458c7c39c4cad435109d96a25a0984",
-     "grade": true,
-     "grade_id": "11",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -F"
    ]
   },
   {
@@ -431,20 +425,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "a79e3439a2f76f7670bd3717e5ce6b6a",
      "grade": false,
-     "grade_id": "21",
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!mkdir thesis"
    ]
   },
   {
@@ -473,20 +463,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "6634eb7a3c2c0127350a2117eb553e03",
-     "grade": true,
-     "grade_id": "22",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -F"
    ]
   },
   {
@@ -510,20 +496,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "d1cac335c5eaab330e5ac4ff59bb2364",
      "grade": false,
-     "grade_id": "23",
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!touch thesis/draft.txt"
    ]
   },
   {
@@ -551,20 +533,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "f9a41111ce0a5eb3def9ff30517e5a7b",
-     "grade": true,
-     "grade_id": "24",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls -F thesis"
    ]
   },
   {
@@ -588,20 +566,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "dc9b0c662fadfe42da9e265469a52169",
      "grade": false,
-     "grade_id": "25",
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!rm thesis/draft.txt"
    ]
   },
   {
@@ -629,20 +603,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "602a34fd09259db6a6bef6b63ddefe5d",
-     "grade": true,
-     "grade_id": "26",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!rm thesis"
    ]
   },
   {
@@ -650,20 +620,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "f72052e12debfb11dd69f4cb8623ee3f",
      "grade": false,
-     "grade_id": "27",
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!rmdir thesis"
    ]
   },
   {
@@ -691,20 +657,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "df043c0cfbc0c4ed9578af35706b96d9",
-     "grade": true,
-     "grade_id": "28",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls"
    ]
   },
   {
@@ -728,20 +690,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "9c9f3588b93ab996b82d6a11f8c4ec3b",
      "grade": false,
-     "grade_id": "29",
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!touch draft.txt"
    ]
   },
   {
@@ -769,20 +727,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "1c77567052c8451891e7cb07e975497a",
      "grade": false,
-     "grade_id": "30",
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!mv draft.txt quotes.txt"
    ]
   },
   {
@@ -811,20 +765,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "fc598ab347affd16c95d8eea0d131483",
-     "grade": true,
-     "grade_id": "31",
+     "grade": false,
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!ls"
    ]
   },
   {
@@ -832,20 +782,16 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": false,
     "nbgrader": {
-     "checksum": "a1b7c1c4f6930fdb6002514aad372de4",
      "grade": false,
-     "grade_id": "34",
      "locked": false,
      "points": 1,
-     "solution": true
+     "solution": false
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!cp quotes.txt quotations.txt"
    ]
   },
   {
