added lecture notes for week 7

--- a/lectures/week-05/20160927-lecture-notes.ipynb
+++ b/lectures/week-05/20160927-lecture-notes.ipynb
@@ -33,11 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/var/pyenv/versions/miniconda3-latest/envs/mc3-2016-class/lib/python3.5/site-packages/IPython/config.py:13: ShimWarning: The `IPython.config` package has been deprecated. You should import from traitlets.config instead.\n",
+      "  \"You should import from traitlets.config instead.\", ShimWarning)\n",
+      "/usr/local/var/pyenv/versions/miniconda3-latest/envs/mc3-2016-class/lib/python3.5/site-packages/IPython/utils/traitlets.py:5: UserWarning: IPython.utils.traitlets has moved to a top-level traitlets package.\n",
+      "  warn(\"IPython.utils.traitlets has moved to a top-level traitlets package.\")\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
@@ -314,6 +325,19 @@
    "source": [
     "%%sql\n",
     "SELECT * \n",
+    "FROM survey;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT * \n",
     "FROM survey\n",
     "WHERE person IN \n",
     "    (SELECT DISTINCT ident\n",
@@ -342,7 +366,7 @@
     "    (SELECT DISTINCT ident\n",
     "     FROM person\n",
     "     WHERE personal = 'Frank')\n",
-    "  AND reading > 7;"
+    "AND reading > 7;"
    ]
   },
   {
@@ -363,11 +387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: None@demo.db'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql sqlite:///demo.db"
    ]
@@ -381,16 +416,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "DROP TABLE IF EXISTS Person;\n",
     "CREATE TABLE Person(\n",
-    "    ident TEXT, \n",
+    "    identity TEXT, \n",
     "    personal TEXT, \n",
     "    family TEXT);\n",
     "DROP TABLE IF EXISTS Site;\n",
@@ -420,11 +480,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-1</td>\n",
+       "        <td>-49.85</td>\n",
+       "        <td>-128.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-3</td>\n",
+       "        <td>-47.15</td>\n",
+       "        <td>-126.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MSK-4</td>\n",
+       "        <td>-48.87</td>\n",
+       "        <td>-123.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('DR-1', -49.85, -128.57),\n",
+       " ('DR-3', -47.15, -126.72),\n",
+       " ('MSK-4', -48.87, -123.4)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "INSERT INTO Site values('DR-1', -49.85, -128.57);\n",
@@ -442,11 +549,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 rows affected.\n",
+      "3 rows affected.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-1</td>\n",
+       "        <td>-49.85</td>\n",
+       "        <td>-128.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-3</td>\n",
+       "        <td>-47.15</td>\n",
+       "        <td>-126.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MSK-4</td>\n",
+       "        <td>-48.87</td>\n",
+       "        <td>-123.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('DR-1', -49.85, -128.57),\n",
+       " ('DR-3', -47.15, -126.72),\n",
+       " ('MSK-4', -48.87, -123.4)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "DELETE FROM Site;\n",
@@ -468,11 +621,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n",
+      "3 rows affected.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>-49.85</td>\n",
+       "        <td>-128.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>-47.15</td>\n",
+       "        <td>-126.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>-48.87</td>\n",
+       "        <td>-123.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('-49.85', '-128.57'), ('-47.15', '-126.72'), ('-48.87', '-123.4')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "CREATE TABLE JustLatLong(lat text, long text);\n",
@@ -491,11 +684,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MSK-4</td>\n",
+       "        <td>-48.87</td>\n",
+       "        <td>-123.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('MSK-4', -48.87, -123.4)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT * \n",
@@ -505,11 +730,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "UPDATE Site \n",
@@ -519,11 +762,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MSK-4</td>\n",
+       "        <td>-48.87</td>\n",
+       "        <td>-125.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('MSK-4', -48.87, -125.4)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT * \n",
@@ -533,11 +808,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-1</td>\n",
+       "        <td>-49.85</td>\n",
+       "        <td>-128.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-3</td>\n",
+       "        <td>-47.15</td>\n",
+       "        <td>-126.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MSK-4</td>\n",
+       "        <td>-48.87</td>\n",
+       "        <td>-125.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('DR-1', -49.85, -128.57),\n",
+       " ('DR-3', -47.15, -126.72),\n",
+       " ('MSK-4', -48.87, -125.4)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT *\n",
@@ -546,11 +865,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "DELETE FROM Site \n",
@@ -559,11 +896,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-1</td>\n",
+       "        <td>-49.85</td>\n",
+       "        <td>-128.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MSK-4</td>\n",
+       "        <td>-48.87</td>\n",
+       "        <td>-125.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('DR-1', -49.85, -128.57), ('MSK-4', -48.87, -125.4)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT * \n",
@@ -572,11 +946,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "UPDATE Site\n",
@@ -585,11 +977,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>DR-1</td>\n",
+       "        <td>-50.0</td>\n",
+       "        <td>-128.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MSK-4</td>\n",
+       "        <td>-50.0</td>\n",
+       "        <td>-125.4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('DR-1', -50.0, -128.57), ('MSK-4', -50.0, -125.4)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT *\n",
@@ -598,11 +1027,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "DELETE FROM Site;"
@@ -610,11 +1057,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>name</th>\n",
+       "        <th>lat</th>\n",
+       "        <th>long</th>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT *\n",
