updated week 7 lecture notes for datanotebook.org

--- a/lectures/week-07/20161018-lecture-notes.ipynb
+++ b/lectures/week-07/20161018-lecture-notes.ipynb
@@ -28,18 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Note*: I'm working on my local machine.  You'll need to adjust the next few cells appropriately if you're using datanotebook.org."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "!createdb week7"
+    "*Note*: To use PostgreSQL on datanotebook.org, use the following steps.  If you are running the notebook elsewhere, adjust the `dbuser` username and host name as appropriate."
    ]
   },
   {
@@ -50,7 +39,29 @@
    },
    "outputs": [],
    "source": [
-    "%sql postgresql://dchud@localhost:5432/week7"
+    "!echo 'redspot' | sudo -S service postgresql restart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!createdb -U dbuser week7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%sql postgresql://dbuser@localhost:5432/week7"
    ]
   },
   {
@@ -117,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "!gshuf -n 10000 2016q1.csv | csvstat"
+    "!shuf -n 10000 2016q1.csv | csvstat"
    ]
   },
   {
@@ -177,7 +188,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "COPY rides FROM '/Users/dchud/Documents/Dropbox/teach/2016-fall-data-management/test/2016q1.csv'\n",
+    "COPY rides FROM '/home/jovyan/work/2016q1.csv'\n",
     "CSV\n",
     "HEADER\n",
     "QUOTE '\"'\n",
@@ -476,7 +487,7 @@
    "source": [
     "### Connecting to the db from python\n",
     "\n",
-    "Here we'll use a little python to update run geocoding queries and flesh out the data a bit more.  You'll need to adjust your username/pass/dbname as appropriate."
+    "Here we'll use a little python to update run geocoding queries and flesh out the data a bit more."
    ]
   },
   {
@@ -494,16 +505,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Note* the specific user and host names are required at datanotebook.org.  If you're running this locally, you'll need to adjust your username/dbname/etc. as appropriate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import psycopg2\n",
     "\n",
-    "conn = psycopg2.connect(\"dbname='week7'\")\n",
+    "conn = psycopg2.connect(\"dbname='week7' user='dbuser' host='localhost'\")\n",
     "c = conn.cursor()"
    ]
   },
@@ -854,19 +872,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Two next steps:\n",
+    "### Next steps:\n",
     "\n",
     " * remove the trailing chars from each line\n",
-    " * create weather dimension and load data using `day_key`"
+    " * create weather and load data \n",
+    " * relate weather data to `days` table somehow"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:mc3-class]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-mc3-class-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
