--- a/lectures/week-07/20161018-lecture-notes.ipynb
+++ b/lectures/week-07/20161018-lecture-notes.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Setup - bikeshare data, again\n",
     "\n",
-    "We'll download the same Bikeshare data you've worked with before, and we'll create some database tables and indexes more deliberately before using PostgreSQL."
+    "We'll download the same Bikeshare data you've worked with before, and we'll create some database tables and indexes more deliberately using PostgreSQL."
    ]
   },
   {
